--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -17,6 +17,7 @@
     /* container size */
     width: 100vw;
     height: auto;
+    max-width:100%;
     padding: 16px;
 
     /* container animation */
@@ -74,13 +75,16 @@
 /* parent tag */
 .sidebar {
     position: absolute;
-    height: 25vh;
+    height: 100vh;
     width: 0;
     top: 0;
     left: 0;
-    z-index: var(--sidebarZindex);
+    z-index: 7;
     
-    background-color:rgba(255, 255, 255, 0);
+    /* color/styling */
+    background-image: linear-gradient(rgba(0, 255, 179, 0.15), rgba(0, 172, 252, 0.15));
+    backdrop-filter: blur(3px);
+    
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
